# kolib

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
include/: core.h  kolib.h  komath.h
src/: core.c  komath.c
