CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(kolib)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_STANDARD_REQUIRED ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

# SDL
SET(SDL_SHARED OFF CACHE BOOL "" FORCE)
SET(SDL_STATIC ON CACHE BOOL "" FORCE)
SET(SDL_TEST OFF CACHE BOOL "" FORCE)
SET(SDL_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(external/SDL)

# SDL_image
SET(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
SET(SDLIMAGE_SAMPLES OFF CACHE BOOL "" FORCE)
SET(SDLIMAGE_TESTS OFF CACHE BOOL "" FORCE)
add_subdirectory(external/SDL_image)

# kolib
ADD_LIBRARY(kolib SHARED
    src/core.c
    src/komath.c
)

TARGET_INCLUDE_DIRECTORIES(kolib
    PUBLIC
        ${PROJECT_SOURCE_DIR}/include
        ${PROJECT_SOURCE_DIR}/external/SDL/include
        ${PROJECT_SOURCE_DIR}/external/SDL_image/include
)

TARGET_LINK_LIBRARIES(kolib
    PRIVATE
        SDL3::SDL3-static
        SDL3_image::SDL3_image-static
)
